# Taller9

./: .gitignore  README.md  Taller.ipynb  image.py  pyproject.toml
